* CWnd::CreateWindowEx now uses HMENU or UINT instead of CMenu*. This allows 
   the menu parameter to specify a menu for a parent window, or a window ID
   for a child window.
* CFrame no longer requires the number of images in the toolbar bitmap to 
  equal the number of toolbar buttons. The width of the button bitmap is
  now assumed to be equal to its height or a minimum of 16.
* Added CToolbar::SetButtonImage.



Changes in detail
-----------------
- Added CRect operator LPCRECT()
- Added CTab::SetFont
- Added CToolbar::SetButtonImage
- Added CWnd::GetDlgCtrlID
- Added CWnd::OnClose
- Added CWnd::OnDestroy
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CMDIChild::OnClose           now returns void.
- Modified CSocket::Bind                port is now UINT
- Modified CSocket::Connect             port is now UINT
- Modified CSocket::Receive             uses char instead of TCHAR
- Modified CSocket::RecieveFrom         uses char instead of TCHAR
- Modified CSocket::Send                uses char instead of TCHAR
- Modified CSocket::SendTo              uses char instead of TCHAR
- Modified CString  operator == 		now accepts const
- Modified CString  operator != 		now accepts const
- Modified CString  operator [] 		now accepts const
- Modified CWnd::CreateEx               now uses HMENU instead of CMenu*
- Modified CWnd::DeferWindowPos			now uses CWnd* for second argument

Added IDW_READY resource for ready string.
Added VS2013 project files
Updated the tutorials to take advantage of the new features.

Incompatibilities with previous versions
----------------------------------------
* The CSocket functions: Receive; ReceiveFrom; Send; and SendTo now use char
* Programs with frames should now use the IDW_READY resource for "Ready". Add IDW_READY
   as a string resource to resource.rc


Version 7.3
===========

New Features and Enhancements
-----------------------------