@@ -118,6 +118,7 @@ namespace Win32xx
 		BOOL  MoveButton(UINT uOldPos, UINT uNewPos) const;
 		BOOL  PressButton(int idButton, BOOL fPress) const;
 		void  SaveRestore(BOOL fSave, TBSAVEPARAMS* ptbsp) const;
+		void  SetButtonInfo(int idButton, int idButtonNew, int iImage, BYTE Style = 0, BYTE State = 0) const;
 		BOOL  SetButtonImage(int idButton, int iImage) const;
 		BOOL  SetBitmapSize(int cx, int cy) const;
 		BOOL  SetButtonSize(int cx, int cy) const;
@@ -1033,6 +1034,26 @@ namespace Win32xx
 		return (BOOL)SendMessage(TB_SETBUTTONSIZE, 0L, MAKELONG(cx, cy));
 	}
 
+	inline void CToolBar::SetButtonInfo(int idButton, int idButtonNew, int iImage, BYTE Style /* = 0 */, BYTE State /* = 0 */) const
+	// Use this to change the buttons image and ID.
+	// The ID must be changed for the image to be changed.
+	{
+		// Retrieve existing state and style
+		TBBUTTON tb = {0};
+		BOOL bSucceeded = GetButton(CommandToIndex(idButton), &tb);
+		assert(bSucceeded);
+
+		TBBUTTONINFO tbbi = {0};
+		tbbi.cbSize = sizeof(TBBUTTONINFO);
+		tbbi.dwMask = TBIF_COMMAND | TBIF_IMAGE | TBIF_STYLE | TBIF_STATE;
+		tbbi.idCommand = idButtonNew;
+		tbbi.iImage = iImage; 
+		tbbi.fsStyle = Style ? Style : tb.fsStyle;
+		tbbi.fsState = State ? State : tb.fsState;
+
+		SendMessage(TB_SETBUTTONINFO, idButton, (LPARAM) &tbbi);
+	}
+
 	inline BOOL CToolBar::SetButtonImage(int idButton, int iImage) const
 	// Sets the buttons image from the toolbar's imagelist. iImage specifies the
 	// index of the image in the imagelist.
@@ -1041,12 +1062,15 @@ namespace Win32xx
 
 		TBBUTTONINFO tbbi = {0};
 		tbbi.cbSize = sizeof(TBBUTTONINFO);
-		tbbi.dwMask = TBIF_IMAGE;
+		tbbi.dwMask = TBIF_IMAGE | TBIF_COMMAND;
 		tbbi.iImage = iImage;
+		tbbi.idCommand = idButton;
 
 		// Note:  TB_SETBUTTONINFO requires comctl32.dll version 4.71 or later
 		//        i.e. Win95 with IE4 / NT with IE4   or later
 		return (BOOL)SendMessage(TB_SETBUTTONINFO, idButton, (LPARAM) &tbbi);
+	//	return (BOOL)SendMessage(TB_CHANGEBITMAP, (WPARAM) (int) idButton, (LPARAM) MAKELPARAM (iImage, 0));
+
 	}
 
 	inline BOOL CToolBar::SetButtonState(int idButton, UINT State) const
